- fixed bug in original css template - at resolution bellow 480vw the menu is not positioned in the center of the screen, due to nav-bar overflow

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3214,6 +3214,7 @@ input, select, textarea {
 		@media screen and (max-width: 480px) {
 
 			#header nav a[href="#menu"] {
+				overflow: hidden;
 				width: 4em;
 				white-space: nowrap;
 				text-indent: 4em;
